[package]
name = "e-jet-systems"
version = "0.1.0"
edition = "2021"
authors = ["Taco"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
fs_extra = "1.3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "=1.0.116"
serde = "1.0.197"
warp = "0.3.7"
once_cell = "1.19.0"
eframe = "0.27.2"
futures = "0.3.30"
egui_plot = "0.27.2"

[target.'cfg(target_os = "windows")'.dependencies]
simconnect = {git = "https://github.com/Tacotakedown/simconnect-rust"}

[features]
gui = []